Fixed spacing between recently tagged links

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -25,6 +25,6 @@ header, .bottom-padding {
   padding-bottom: 4em;
 }
 
-.tagged-link {
+.bottom-padding-small {
   padding-bottom: 1em;
 }
